# beancounter

./: .dockerignore  .gitignore  BeanCounter.toml  COPYING  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  cloudbuild.yaml  entrypoint.sh
.dependabot/: config.yml
.github/: dependabot.yml
lib/: .gitignore  Cargo.toml  build.rs
lib/proto/: beancounter.proto
lib/src/: lib.rs
migrations/2019-07-23-174608_create_pgcrypto_extension/: down.sql
migrations/2019-07-23-174628_create_balances/: down.sql  up.sql
migrations/2019-07-23-174950_create_transaction_types/: down.sql  up.sql
migrations/2019-07-23-175000_create_transactions/: up.sql
migrations/2019-07-23-212701_create_payments/: up.sql
migrations/2019-07-26-165507_create_stripe_charges/: down.sql  up.sql
migrations/2019-08-03-161538_create_stripe_connect_accounts/: down.sql  up.sql
migrations/2019-08-03-161648_create_stripe_connect_transfer/: down.sql  up.sql
migrations/2019-09-19-214029_add_payments_promo_column/: down.sql  up.sql
migrations/2019-09-19-214801_add_promo_debit/: down.sql  up.sql
migrations/2019-10-06-200715_add_updated_at_trigger/: up.sql
src/: config.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs  sql_types.rs  stripe_client.rs
test/: BeanCounter.crt  BeanCounter.key  UmpyreAuth.crt
