[package]
name = "beancounter"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4"  }
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
env_logger = { version = "0.6", default-features = false }
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
instrumented = { git = "ssh://git@github.com/umpyre-code/instrumented.git" }
lazy_static = "1.3"
log = "0.4"
rand = "0.7"
regex = "1"
beancounter-lib = { path = "lib"}
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
toml = "0.5"
tower-hyper = "0.1"
tower-request-modifier = "0.1"
tower-service = "0.2"
tower-util = "0.1"
url = "1"
yansi = "0.5"
