[package]
name = "beancounter"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2018"

[dependencies]
beancounter-grpc = { path = "lib" }
bigdecimal = "0.1"
chrono = { version = "0.4" }
data-encoding = "2.1"
diesel = { version = "1.4", features = [ "chrono", "numeric", "postgres", "r2d2", "serde_json", "uuidv07"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.14"
env_logger = { version = "0.6", default-features = false }
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
instrumented = { git = "ssh://git@github.com/umpyre-code/instrumented.git" }
lazy_static = "1.3"
log = "0.4"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stripe-rust = { version = "0.10", features = ["async"] }
tokio = "0.1"
toml = "0.5"
tower-hyper = "0.1"
tower-request-modifier = "0.1"
tower-service = "0.2"
tower-util = "0.1"
url = "2"
uuid = { version = "0.7", features = ["serde", "v4"] }
yansi = "0.5"

[dev-dependencies]
rand = "0.7"
